[package]
name = "whirlpool_bot"
version = "0.1.0"
edition = "2021" # Changed from 2024 to 2021

[dependencies]
anyhow = "1.0"
solana-client = { version = "^2.1" }
solana-sdk = { version = "^2.1" }
spl-token-2022 = { version = "^7.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^6.0" }
orca_whirlpools = { version = "^2.0" }
orca_whirlpools_client = { version = "^2.0" }
orca_whirlpools_core = { version = "^1.0" }
tokio = { version = "^1.43.0", features = ["full"] }
serde_json = "^1.0"
dotenv = "0.15"
env_logger = "0.11.6"
clap = { version = "^4.5", features = ["derive"] }
colored = "^3.0"
signature = "2.3.0-pre.6" # For colored output (optional)

[features]
default = []