[package]
name = "whirlpool_bot"
version = "0.1.0"
edition = "2021" # Changed from 2024 to 2021

[dependencies]
anyhow = "1.0"
solana-client = { version = "^2.1" }
solana-sdk = { version = "^2.1" }
spl-token = { version = "^6.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "^7.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^6.0" }
orca_whirlpools = { version = "^2.0" }
orca_whirlpools_client = { version = "^2.0" }
orca_whirlpools_core = { version = "^1.0" }
tokio = { version = "^1.43.0", features = ["full"] }
dotenv = "0.15"
env_logger = "0.11.6"
clap = { version = "^4.5", features = ["derive"] }
rand = "0.8.5"

[features]
default = []